; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_light_trace.c_CM_GenerateBoundaryForPoints.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_light_trace.c_CM_GenerateBoundaryForPoints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CM_GenerateBoundaryForPoints(float* %0, float* %1, i32 %2, i32 %3) #0 {
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store float* %0, float** %5, align 8
  store float* %1, float** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i32 @VectorSubtract(i32 %10, i32 %11, i32 %12)
  %14 = load float*, float** %6, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load float*, float** %5, align 8
  %17 = call i32 @CrossProduct(float* %14, i32 %15, float* %16)
  %18 = load float*, float** %5, align 8
  %19 = load float*, float** %5, align 8
  %20 = call i32 @VectorNormalize(float* %18, float* %19)
  %21 = load i32, i32* %7, align 4
  %22 = load float*, float** %5, align 8
  %23 = call float @DotProduct(i32 %21, float* %22)
  %24 = load float*, float** %5, align 8
  %25 = getelementptr inbounds float, float* %24, i64 3
  store float %23, float* %25, align 4
  ret void
}

declare dso_local i32 @VectorSubtract(i32, i32, i32) #1

declare dso_local i32 @CrossProduct(float*, i32, float*) #1

declare dso_local i32 @VectorNormalize(float*, float*) #1

declare dso_local float @DotProduct(i32, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
